@@ -5,7 +5,7 @@
 	<!-- ================================= target: Tag latest succesful build =============================== -->
 	<target name="tagLatest">
         <exec dir="${basedir}" executable="bash" failonerror="true">
-                <arg line="-c './tools/latest ${ant.project.name} sweethorse'" />
+                <arg line="-c './tools/latest ${ant.project.name} whinyantelope'" />
         </exec>
 	</target>
 </project>
