@@ -23,6 +23,9 @@
  * @SuppressWarnings(PHPMD.TooManyMethods)
  */
 abstract class FroodController {
+	/** @var string Which action is Frood invoking? */
+	private $_action;
+
 	/** @var string Which application are we running? */
 	private $_app;
 
@@ -41,12 +44,14 @@ abstract class FroodController {
 	 *
 	 * @param string $module The module we're working with.
 	 * @param string $app    Which application are we running?
+	 * @param string $action Which action is Frood invoking?
 	 *
 	 * @return void
 	 */
-	public function __construct($module, $app) {
+	public function __construct($module, $app, $action) {
 		$this->_module = $module;
 		$this->_app    = $app;
+		$this->_action = $action;
 
 		$this->doOutputXoops();
 	}
@@ -67,14 +72,12 @@ abstract class FroodController {
 	 * Render the output.
 	 * The Frood calls this when appropriate.
 	 *
-	 * @param string $action The action to render the view for.
-	 *
 	 * @return void
 	 *
 	 * @throws RuntimeException For undefined output modes.
 	 */
-	final public function render($action) {
-		$renderer = new $this->_renderer($this->_module, $this->_app, get_class($this), $action);
+	final public function render() {
+		$renderer = new $this->_renderer($this->_module, $this->_app, get_class($this), $this->_action);
 
 		header('Content-Type: ' . $renderer->getContentType());
 
@@ -124,6 +127,43 @@ abstract class FroodController {
 	 */
 	final public function doOutputDisabled() {
 		$this->_setRenderer('FroodRendererDisabled');
+	}
+
+	/**
+	 * Forward to another action. This ends all local execution and displays the results of the remote action.
+	 *
+	 * @param FroodParameters $parameters The parameters for the action. Defaults to no parameters.
+	 * @param string          $action     The action to forward to. Defaults to current action.
+	 * @param string          $controller The controller to forward to. Defaults to current controller.
+	 * @param string          $module     The module to forward to. Defaults to current module.
+	 * @param string          $app        The app to forward to. Defaults to current app.
+	 *
+	 * @return void
+	 *
+	 * @SuppressWarnings(PHPMD.ExitExpression) Yeah, well I need an exit!
+	 */
+	final protected function _forward(FroodParameters $parameters = null, $action = null, $controller = null, $module = null, $app = null) {
+		if ($parameters === null) {
+			$parameters = new FroodParameters(array());
+		}
+		if ($action === null) {
+			$action = $this->_action;
+		}
+		if ($controller === null) {
+			$controller = $this->_getBasename();
+		}
+		if ($module === null) {
+			$module = $this->_module;
+		}
+		if ($app === null) {
+			$app = $this->_app;
+		}
+
+		$remote = new FroodRemote($module, $app, null, true);
+
+		echo $remote->dispatch($controller, $action, $parameters);
+
+		exit;
 	}
 
 	/**
@@ -181,5 +221,23 @@ abstract class FroodController {
 	 */
 	final protected function _getRenderer() {
 		return $this->_renderer;
+	}
+
+	/**
+	 * Get the lowercased_with_underscores name of this controller.
+	 *
+	 * @return string The lowercased_with_underscores name of this controller.
+	 */
+	public function _getBasename() {
+		return FroodUtil::convertPhpNameToHtmlName(
+			preg_replace(
+				array(
+					'/^' . FroodUtil::convertHtmlNameToPhpName($this->_module) . '/',
+					'/Controller$/',
+				),
+				array('', ''),
+				get_class($this)
+			)
+		);
 	}
 }
